Number of viewing rays per pixel is added (spp)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,15 +11,13 @@ file(GLOB VECTOR_TEST_SOURCES "test/vector/*.cpp")
 
 find_package(yaml-cpp REQUIRED)
 find_package(OpenEXR REQUIRED)
+find_package(Boost COMPONENTS thread REQUIRED)
 
 if (UNIX)
   set(CMAKE_CXX_FLAGS_DEBUG "-g -rdynamic -std=c++14 -pipe")
   set(CMAKE_CXX_FLAGS_RELEASE "-std=c++14 -pipe -O3 -DNDEBUG -march=native -flto")
-elseif (MSVC)
-  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MT /I${BOOST_ROOT} /std:c++14")
-  set(CMAKE_CXX_FLAGS_RELEASE "/nologo /DNDEBUG /MT /I${BOOST_ROOT} /std:c++14 /O2")
 else()
-  message(FATAL_ERROR "Unsupported platform (not in { UNIX, MSVC })")
+  message(FATAL_ERROR "Unsupported platform (not in { UNIX })")
 endif()
 
 add_executable(${BINARY} ${SOURCES})
