--- a/sphere.yaml
+++ b/sphere.yaml
@@ -1,7 +1,7 @@
 render:
-  resolution: 1000x1000
+  resolution: 200x200
   shadow_bias: 5e-4
-  spp: 8
+  spp: 1
   tile_size: "8 8"
   seed: 987654321
 
@@ -13,7 +13,7 @@ intersect:
 scene:
   camera:
     type: perspective
-    position: "10 10 0"
+    position: "9 9 0"
     lookat: "0 0 0"
     up: "0 1 0"
     near: 0.1
@@ -25,88 +25,81 @@ scene:
       transform:
         - translate: "-1 0.5 0"
       material:
-        phong:
-          color: "1 1 1"
-          Kd: 0.0
-          Ks: 1.0
-          Es: 16
+        ggx:
+          color: "0.8 0.8 0"
+          Kd: 0.8
+          roughness: 0.2
+          fresnel: "0.9 0.8 0.8"
     - shape: "de_sphere"
       radius: 0.5
       transform:
         - translate: "0 0.5 1"
       material:
-        phong:
-          color: "1.0 1.0 1.0"
-          Kd: 0.0
-          Ks: 1.0
-          Es: 16
+        ggx:
+          color: "0 0.8 0"
+          Kd: 0.8
+          roughness: 0.2
+          fresnel: "0.9 0.8 0.8"
     - shape: "de_sphere"
       radius: 0.5
       transform:
         - translate: "-2 0.5 -1"
       material:
-        phong:
-          color: "1.0 1.0 1.0"
-          Kd: 0.0
-          Ks: 1.0
-          Es: 16
+        ggx:
+          color: "0 0 0.8"
+          Kd: 0.8
+          roughness: 0.2
+          fresnel: "0.9 0.8 0.8"
     - shape: "de_sphere"
       radius: 0.5
       transform:
         - translate: "2 0.5 -1"
       material:
-        phong:
-          color: "1.0 1.0 1.0"
-          Kd: 0.0
-          Ks: 1.0
-          Es: 16
+        ggx:
+          color: "0 0.8 0.8"
+          Kd: 0.8
+          roughness: 0.2
+          fresnel: "0.9 0.8 0.8"
     - shape: "de_sphere"
       radius: 0.5
       transform:
         - translate: "1 0.5 0"
       material:
-        phong:
-          color: "1.0 1.0 1.0"
-          Kd: 0.0
-          Ks: 1.0
-          Es: 16
+        ggx:
+          color: "0.8 0 0.8"
+          Kd: 0.8
+          roughness: 0.2
+          fresnel: "0.9 0.8 0.8"
     - shape: "de_quad"
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
       d: "-5 0 -5"
-      transform:
-        - rotate:
-            axis: "1 0 0"
-            angle: 180
       material:
-        phong:
+        ggx:
           color: "1 0 0"
           Kd: 0.2
-          Ks: 0.8
-          Es: 32
+          roughness: 0.5
+          fresnel: "1 0 0"
     - shape: "de_quad"
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
       d: "-5 0 -5"
       transform:
-        - rotate:
-            axis: "1 0 0"
-            angle: 180
         - rotate:
             axis: "0 0 1"
             angle: "-90"
         - translate: "-5 5 0"
       material:
-        phong:
+        ggx:
           color: "1 0 0"
           Kd: 0.2
-          Ks: 0.8
-          Es: 32
+          roughness: 0.5
+          fresnel: "1 0 0"
   lights:
     - type: "rect"
-      color: "1.0 1.0 1.0"
+      color: "3 3 3"
       p_min: "-2.5 -2.5"
       p_max: "2.5 2.5"
       spp: 2000
