GGX importance sampling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(OpenEXR REQUIRED)
 
 if (UNIX)
   set(CMAKE_CXX_FLAGS_DEBUG "-g -rdynamic -std=c++14 -pipe")
-  set(CMAKE_CXX_FLAGS_RELEASE "-std=c++14 -pipe -O3 -DNDEBUG -march=native -flto")
+  set(CMAKE_CXX_FLAGS_RELEASE "-std=c++14 -pipe -flto -O3 -DNDEBUG -march=native -funroll-loops -frename-registers -fopenmp -D_GLIBCXX_PARALLEL")
 else()
   message(FATAL_ERROR "Unsupported platform (not in { UNIX })")
 endif()
