--- a/example_scene.yaml
+++ b/example_scene.yaml
@@ -30,8 +30,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.4
-          #fresnel: "0.9 0.8 0"
-          fresnel: "1 1 1"
+          albedo: "1 1 1"
     - shape: "de_sphere"
       radius: 0.5
       transform:
@@ -40,8 +39,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.4
-          #fresnel: "0 0.8 0"
-          fresnel: "1 1 1"
+          albedo: "1 1 1"
     - shape: "de_sphere"
       radius: 0.5
       transform:
@@ -50,8 +48,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.4
-          #fresnel: "0 0 0.8"
-          fresnel: "1 1 1"
+          albedo: "1 1 1"
     - shape: "de_sphere"
       radius: 0.5
       transform:
@@ -60,8 +57,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.4
-          #fresnel: "0 0.8 0.8"
-          fresnel: "1 1 1"
+          albedo: "1 1 1"
     - shape: "de_sphere"
       radius: 0.5
       transform:
@@ -70,8 +66,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.4
-          #fresnel: "0.8 0 0"
-          fresnel: "1 1 1"
+          albedo: "1 1 1"
     - shape: "de_quad" # bottom plane
       a: "-5 0 5"
       b: "5 0 5"
@@ -81,7 +76,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.4
-          fresnel: "0.7 0.7 0.7"
+          albedo: "0.7 0.7 0.7"
     - shape: "de_quad" # back plane
       a: "-5 0 5"
       b: "5 0 5"
@@ -96,7 +91,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.05
-          fresnel: "1 1 1"
+          albedo: "1 1 1"
     - shape: "de_quad" # left plane
       a: "-5 0 5"
       b: "5 0 5"
@@ -111,7 +106,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.6
-          fresnel: "1 0.2 0.2"
+          albedo: "1 0.2 0.2"
     - shape: "de_quad" # right plane
       a: "-5 0 5"
       b: "5 0 5"
@@ -126,7 +121,7 @@ scene:
         ggx:
           emittance: "0 0 0"
           roughness: 0.6
-          fresnel: "0.2 0.2 1"
+          albedo: "0.2 0.2 1"
     - shape: "de_quad" # light
       a: "-5 0 5"
       b: "5 0 5"
