--- a/example_scene.yaml
+++ b/example_scene.yaml
@@ -1,83 +1,113 @@
 render:
-  resolution: 1920x1080
+  resolution: 1024x768
   subpixels: 4
   spp: 1024
-  bounce: 3
+  bounce: 20
   tile_size: "32 32"
   seed: 0
   max_rr: 0.3
 
 intersect:
   hit_epsilon: 1e-4
+  bias_epsilon: 1e-4
   normal_delta: 1e-4
   max_iters: 100
 
 scene:
   camera:
     type: perspective
-    position: "10 6 0"
+    position: "7.5 5 0"
     lookat: "1 1 0"
     up: "0 1 0"
     near: 0.1
     far: 1000
-    fov: 75
-  objects: # for light source, use material "light"
-    - shape: "de_sphere"
+    fov: 60
+  objects:
+    # coordinates are in left handed system
+    # for light source, use material "light" (area light only)
+    - shape: "sphere"
       radius: 0.5
       transform:
         - translate: "0 0.5 0"
       material:
         ggx:
           emittance: "0 0 0"
-          roughness: 0.4
+          roughness: 0
           rgb_refl: "1 1 1"
-    - shape: "de_sphere"
+    - shape: "sphere"
       radius: 0.5
       transform:
         - translate: "1 0.5 1"
       material:
         ggx:
           emittance: "0 0 0"
-          roughness: 0.4
+          roughness: 0
           rgb_refl: "1 1 1"
-    - shape: "de_sphere"
+    - shape: "sphere"
       radius: 0.5
       transform:
         - translate: "-1 0.5 -1"
       material:
         ggx:
           emittance: "0 0 0"
-          roughness: 0.4
+          roughness: 0
           rgb_refl: "1 1 1"
-    - shape: "de_sphere"
+    - shape: "sphere"
       radius: 0.5
       transform:
         - translate: "3 0.5 -1"
       material:
         ggx:
           emittance: "0 0 0"
-          roughness: 0.4
+          roughness: 0
           rgb_refl: "1 1 1"
-    - shape: "de_sphere"
+    - shape: "sphere"
       radius: 0.5
       transform:
         - translate: "2 0.5 0"
       material:
         ggx:
           emittance: "0 0 0"
-          roughness: 0.4
+          roughness: 0
           rgb_refl: "1 1 1"
-    - shape: "de_quad" # bottom plane
+    - shape: "sphere" # glass ball
+      radius: 1
+      transform:
+        - translate: "1 1 -3"
+      material:
+        ggx:
+          transport: refract
+          emittance: "0 0 0"
+          roughness: 0
+          rgb_refl: "1 1 1"
+          rgb_refr: "1 1 1"
+          eta_i: 1
+          eta_t: 1.5
+    - shape: "sphere"
+      radius: 1
+      transform:
+        - translate: "1 1 3"
+      material:
+        sss:
+          emittance: "0 0 0"
+          roughness: 0
+          rgb_refl: "1 1 1"
+          rgb_refr: "1 0 0"
+          eta_i: 1
+          eta_t: 1.48
+          sigma_a: 0 0 0
+          sigma_s: 1 1 1
+          g: "0"
+    - shape: "quad" # bottom plane
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
       d: "-5 0 -5"
       material:
-        ggx:
+        lambert:
           emittance: "0 0 0"
-          roughness: 0.4
-          rgb_refl: "0.7 0.7 0.7"
-    - shape: "de_quad" # back plane
+          rgb_refl: "0.8 0.8 0.8"
+    - shape: "quad" # back plane
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
@@ -88,11 +118,12 @@ scene:
             angle: "-90"
         - translate: "-5 5 0"
       material:
-        ggx:
+        lambert:
           emittance: "0 0 0"
-          roughness: 0.05
-          rgb_refl: "1 1 1"
-    - shape: "de_quad" # left plane
+          rgb_refl: "0.2 1 0.2"
+          rgb_refr: "1 1 1"
+          roughness: 0.01
+    - shape: "quad" # left plane
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
@@ -103,11 +134,10 @@ scene:
             angle: "90"
         - translate: "0 5 -5"
       material:
-        ggx:
+        lambert:
           emittance: "0 0 0"
-          roughness: 0.6
           rgb_refl: "1 0.2 0.2"
-    - shape: "de_quad" # right plane
+    - shape: "quad" # right plane
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
@@ -118,17 +148,16 @@ scene:
             angle: "-90"
         - translate: "0 5 5"
       material:
-        ggx:
+        lambert:
           emittance: "0 0 0"
-          roughness: 0.6
           rgb_refl: "0.2 0.2 1"
-    - shape: "de_quad" # light
+    - shape: "quad" # light
       a: "-5 0 5"
       b: "5 0 5"
       c: "5 0 -5"
       d: "-5 0 -5"
       transform:
-        - translate: "0 6 0"
+        - translate: "0 5 0"
       material:
         light:
-          emittance: "1.2 1.2 1.2"
+          emittance: "1 1 1"
