--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(OpenEXR REQUIRED)
 find_package(ASSIMP REQUIRED)
 
 if (UNIX)
-  set(CMAKE_CXX_FLAGS_DEBUG "-g -rdynamic -std=c++14 -pipe")
+  set(CMAKE_CXX_FLAGS_DEBUG "-g -rdynamic -march=native -std=c++14 -pipe")
   set(CMAKE_CXX_FLAGS_RELEASE
     "-std=c++14 -pipe -flto -O3 -DNDEBUG -march=native -funroll-loops\
     -fopenmp -D_GLIBCXX_PARALLEL"
