Parallelize BVH construction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,7 @@ find_package(ASSIMP REQUIRED)
 if (UNIX)
   set(CMAKE_CXX_FLAGS_DEBUG "-g -rdynamic -march=native -std=c++14 -pipe")
   set(CMAKE_CXX_FLAGS_RELEASE
-    "-std=c++14 -pipe -flto -O3 -DNDEBUG -march=native -funroll-loops\
-    -fopenmp -D_GLIBCXX_PARALLEL"
+    "-std=c++14 -pipe -flto -O3 -DNDEBUG -march=native -funroll-loops"
     )
 else()
   message(FATAL_ERROR "Unsupported platform (GNU/Linux only)")
